🐛 Fix overflow on cover block

--- a/_assets/sass/_global.scss
+++ b/_assets/sass/_global.scss
@@ -12,6 +12,7 @@ body {
 	color: $color-text;
 	font-family: $font-sans;
 	line-height: 1.45;
+	overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
